# almoxarife

./: Cargo.toml  README.md  balaio.toml  dist-workspace.toml
.github/workflows/: ci.yml
src/: config.rs  main.rs  plugin.rs  setup.rs  setup_test.rs
src/setup/: plugin.rs
tests/: git  kak
