[package]
name = "almoxarife"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.2"
anyhow = "1.0"
thiserror = "1.0.31"
colorized = "1.0.0"
tokio = { version = "1.33.0", features = ["rt", "process", "fs"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "al"
path = "src/main.rs"
