[package]
name = "almoxarife"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gustavo-hms/almoxarife"

[dependencies]
colorized = "1.0.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "al"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
