[package]
name = "almoxarife"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/gustavo-hms/almoxarife"
authors = ["Gustavo HMS"]
description = "A command line package manager for the Kakoune editor"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]
keywords = ["kakoune"]

[dependencies]
colorized = "1.0.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "al"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
